--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -14,6 +14,9 @@
 3. Убедитесь, что в вашей ОС установлен docker.
 4. Зарегистрируйте аккаунт на сайте https://hub.docker.com/, выполните команду docker login и введите логин, пароль.
 
+#### 
+![terr0](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/hw-terr0.jpg)
+
 ------
 
 ### Инструменты и дополнительные материалы, которые пригодятся для выполнения задания
@@ -28,14 +31,128 @@
 
 1. Перейдите в каталог [**src**](https://github.com/netology-code/ter-homeworks/tree/main/01/src). Скачайте все необходимые зависимости, использованные в проекте. 
 2. Изучите файл **.gitignore**. В каком terraform-файле, согласно этому .gitignore, допустимо сохранить личную, секретную информацию?
+
+------
+personal.auto.tfvars  --хранить секретные данные здесь
+------
+
 3. Выполните код проекта. Найдите  в state-файле секретное содержимое созданного ресурса **random_password**, пришлите в качестве ответа конкретный ключ и его значение.
+
+![task3](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/hw-terr-task3.jpg)
+
 4. Раскомментируйте блок кода, примерно расположенный на строчках 29–42 файла **main.tf**.
 Выполните команду ```terraform validate```. Объясните, в чём заключаются намеренно допущенные ошибки. Исправьте их.
+
+------
+│   on main.tf line 24, in resource "docker_image":
+│   24: resource "docker_image" {
+│ 
+│ All resource blocks must have 2 labels (type, name). --ошибка говорит о том что у ресурса docker_image отсутствует имя
+
+ Error: Invalid resource name
+│ 
+│   on main.tf line 29, in resource "docker_container" "1nginx":
+│   29: resource "docker_container" "1nginx" {
+│ 
+│ A name must start with a letter or underscore and may contain only letters, digits, underscores, and dashes. --ошибка связана с тем что в terraform имена ресурсов должны начинаться с буквы или подчеркивания и могут содержать только буквы, цифры, подчеркивания и тире.
+
+name  = "example_${random_password.random_string_FAKE.result}"  --неверно указано имя ресурса, должно быть "random_password.random_string"
+------
+
 5. Выполните код. В качестве ответа приложите: исправленный фрагмент кода и вывод команды ```docker ps```.
+
+```
+так должен выглядеть main.tf:
+
+terraform {
+  required_providers {
+    docker = {
+      source  = "kreuzwerker/docker"
+      version = "~> 3.0.1"
+    }
+  }
+  required_version = ">=0.13" /*Многострочный комментарий.
+ Требуемая версия terraform */
+}
+provider "docker" {}
+
+#однострочный комментарий
+
+resource "random_password" "random_string" {
+  length      = 16
+  special     = false
+  min_upper   = 1
+  min_lower   = 1
+  min_numeric = 1
+}
+
+
+resource "docker_image" "nginx"{
+  name         = "nginx:latest"
+  keep_locally = true
+}
+
+resource "docker_container" "nginx" {
+  image = docker_image.nginx.image_id
+  name  = "example_${random_password.random_string.result}"
+
+  ports {
+    internal = 80
+    external = 9090
+  }
+}
+```
+
+![task5](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/hw-terr-task5.jpg)
+
 6. Замените имя docker-контейнера в блоке кода на ```hello_world```. Не перепутайте имя контейнера и имя образа. Мы всё ещё продолжаем использовать name = "nginx:latest". Выполните команду ```terraform apply -auto-approve```.
+
+![task6](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/hw-terr-task6.jpg)
+
 Объясните своими словами, в чём может быть опасность применения ключа  ```-auto-approve```. Догадайтесь или нагуглите зачем может пригодиться данный ключ? В качестве ответа дополнительно приложите вывод команды ```docker ps```.
-8. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**. 
-9. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **ОБЯЗАТЕЛЬНО НАЙДИТЕ В ПРЕДОСТАВЛЕННОМ КОДЕ**, а затем **ОБЯЗАТЕЛЬНО ПОДКРЕПИТЕ** строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+
+------
+1. Ключ -auto-approve отключает запрос подтверждения перед применением изменений, что может привести к нежелательным результатам. Если конфигурационные файлы содержат ошибки, применение изменений без подтверждения может привести к непредвиденным проблемам.
+2. Если в файле конфигурации terraform есть ошибки или опечатки, использование auto-approve может привести к непреднамеренному удалению важных ресурсов или инфраструктуры.
+3. Применение изменений без возможности проверки может представлять угрозу для безопасности инфраструктуры. Некорректно настроенные ресурсы могут быть доступны извне или привести к уязвимостям.
+4. Некоторые изменения могут иметь неожиданные последствия, которые могут быть пропущены из-за отсутствия возможности проверить изменения перед их применением.
+
+ Ключ "-auto-approve" может быть полезен для: автоматизации процессов; использования в скриптах и планировщиках; быстрого применения изменений, например в тестировании и разработке.
+ ------
+
+7. Уничтожьте созданные ресурсы с помощью **terraform**. Убедитесь, что все ресурсы удалены. Приложите содержимое файла **terraform.tfstate**.
+
+![task7](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/hw-terr-task7.jpg)
+
+```
+{
+  "version": 4,
+  "terraform_version": "1.5.7",
+  "serial": 19,
+  "lineage": "b5766f3c-ed84-70d8-22c2-715d2ed239b4",
+  "outputs": {},
+  "resources": [],
+  "check_results": null
+}
+```
+
+8. Объясните, почему при этом не был удалён docker-образ **nginx:latest**. Ответ **ОБЯЗАТЕЛЬНО НАЙДИТЕ В ПРЕДОСТАВЛЕННОМ КОДЕ**, а затем **ОБЯЗАТЕЛЬНО ПОДКРЕПИТЕ** строчкой из документации [**terraform провайдера docker**](https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs).  (ищите в классификаторе resource docker_image )
+
+------
+  # docker_image.hello_world will be destroyed
+  - resource "docker_image" "hello_world" {
+      - id           = "sha256:e4720093a3c1381245b53a5a51b417963b3c4472d3f47fc301930a4f3b17666anginx:latest" -> null
+      - image_id     = "sha256:e4720093a3c1381245b53a5a51b417963b3c4472d3f47fc301930a4f3b17666a" -> null
+      - keep_locally = true -> null
+      - name         = "nginx:latest" -> null
+      - repo_digest  = "nginx@sha256:c26ae7472d624ba1fafd296e73cecc4f93f853088e6a9c13c0d52f6ca5865107" -> null
+	  
+
+https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs/resources/image 
+"keep_locally (Boolean) If true, then the Docker image won't be deleted on destroy operation. If this is false, it will delete the image from the docker local storage on destroy operation."
+
+Образ docker nginx:latest не был удален, поскольку атрибуту keep_locally было присвоено значение true в конфигурации terraform для ресурса docker_image. Этот параметр сообщает terraform сохранять образ локально, даже после уничтожения ресурса.
+------
 
 
 ------
