--- a/01/hw-01.md
+++ b/01/hw-01.md
@@ -151,7 +151,7 @@ resource "docker_container" "nginx" {
 https://docs.comcloud.xyz/providers/kreuzwerker/docker/latest/docs/resources/image 
 "keep_locally (Boolean) If true, then the Docker image won't be deleted on destroy operation. If this is false, it will delete the image from the docker local storage on destroy operation."
 
-Образ docker nginx:latest не был удален, поскольку атрибуту keep_locally было присвоено значение true в конфигурации terraform для ресурса docker_image. Этот параметр сообщает terraform сохранять образ локально, даже после уничтожения ресурса.
+1. Образ docker nginx:latest не был удален, поскольку атрибуту keep_locally было присвоено значение true в конфигурации terraform для ресурса docker_image. Этот параметр сообщает terraform сохранять образ локально, даже после уничтожения ресурса.
 ------
 
 
