--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -1,4 +1,4 @@
-# Домашнее задание к занятию «Основы Terraform. Yandex Cloud»
+# Домашнее задание к занятию «Основы Terraform. Yandex Cloud» - RomanG
 
 ### Цели задания
 
@@ -38,6 +38,46 @@
 - скриншот ЛК Yandex Cloud с созданной ВМ, где видно внешний ip-адрес;
 - скриншот консоли, curl должен отобразить тот же внешний ip-адрес;
 - ответы на вопросы.
+
+![tf-hw2-task1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task1.jpg)
+
+![tf-hw2-task.1.1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task1.1.jpg)
+
+---
+Инициализируйте проект, выполните код. Исправьте намеренно допущенные синтаксические ошибки. Ищите внимательно, посимвольно. Ответьте, в чём заключается их суть
+
+1.rpc error: code = FailedPrecondition desc = Platform "standart-v4" not found
+│ 
+│   with yandex_compute_instance.platform,
+│   on main.tf line 15, in resource "yandex_compute_instance" "platform":
+│   15: resource "yandex_compute_instance" "platform" {
+
+"standart-v4" ---> "standard-v1"
+"standart-v4" --ошибка в написаниие standarD;
+их всего standard с1 по 3
+по конфигурацию:
+    cores         = 1
+    memory        = 1
+    core_fraction = 5
+подходят все 3 возможные платформы (standard), но все с минимальным количеством ядер = 2, а дешевле всего standard-v2
+1)https://cloud.yandex.ru/ru/docs/compute/concepts/performance-levels
+2)https://cloud.yandex.ru/ru/docs/compute/pricing#prices
+т.е. должно выглядеть примерно так:
+    cores         = 2
+    memory        = 1
+    core_fraction = 5
+
+
+2.Ответьте, как в процессе обучения могут пригодиться параметры preemptible = true и core_fraction=5 в параметрах ВМ.
+
+preemptible = true --указывает на то что ВМ может быть принудительно остановлена в любой момент. Это может произойти в двух случаях:
+Если с момента запуска виртуальной машины прошло 24 часа.
+Если возникнет нехватка ресурсов для запуска обычной виртуальной машины в той же зоне доступности. Вероятность такого события низкая, но может меняться изо дня в день.
+
+core_fraction=5 --указывает на то что минимальный уровень производительности ЦПУ может быть снижен до 5% от 100%.
+
+Такие ВМ отлично подходят для процесса обучения, т.к. никаких архиважных и мегапроизводительных операции не производится и нет никакой критичности в просадке по производительности или даже остановке.
+---
 
 
 ### Задание 2
