--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -39,6 +39,8 @@
 - скриншот консоли, curl должен отобразить тот же внешний ip-адрес;
 - ответы на вопросы.
 
+####
+
 ![tf-hw2-task1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task1.jpg)
 
 ![tf-hw2-task.1.1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task1.1.jpg)
@@ -70,13 +72,14 @@
 
 2.Ответьте, как в процессе обучения могут пригодиться параметры preemptible = true и core_fraction=5 в параметрах ВМ.
 
-preemptible = true --указывает на то что ВМ может быть принудительно остановлена в любой момент. Это может произойти в двух случаях:
+`preemptible = true` --указывает на то что ВМ может быть принудительно остановлена в любой момент. Это может произойти в двух случаях:
 Если с момента запуска виртуальной машины прошло 24 часа.
 Если возникнет нехватка ресурсов для запуска обычной виртуальной машины в той же зоне доступности. Вероятность такого события низкая, но может меняться изо дня в день.
 
-core_fraction=5 --указывает на то что минимальный уровень производительности ЦПУ может быть снижен до 5% от 100%.
+`core_fraction=5` --указывает на то что минимальный уровень производительности ЦПУ может быть снижен до 5% от 100%.
 
 Такие ВМ отлично подходят для процесса обучения, т.к. никаких архиважных и мегапроизводительных операции не производится и нет никакой критичности в просадке по производительности или даже остановке.
+
 ---
 
 
