--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -63,8 +63,8 @@
     core_fraction = 5
 подходят все 3 возможные платформы (standard), но все с минимальным количеством ядер = 2, а дешевле всего standard-v2
 
-1)https://cloud.yandex.ru/ru/docs/compute/concepts/performance-levels
-2)https://cloud.yandex.ru/ru/docs/compute/pricing#prices
+[один]https://cloud.yandex.ru/ru/docs/compute/concepts/performance-levels
+[два]https://cloud.yandex.ru/ru/docs/compute/pricing#prices
 т.е. должно выглядеть примерно так:
     cores         = 2
     memory        = 1
