--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -57,19 +57,22 @@
 "standart-v4" ---> "standard-v1"
 "standart-v4" --ошибка в написаниие standarD;
 их всего standard с1 по 3
-по конфигурацию:
+под конфигурацию:
+```
     cores         = 1
     memory        = 1
     core_fraction = 5
+```
 подходят все 3 возможные платформы (standard), но все с минимальным количеством ядер = 2, а дешевле всего standard-v2
 
 [1](https://cloud.yandex.ru/ru/docs/compute/concepts/performance-levels)
 [2](https://cloud.yandex.ru/ru/docs/compute/pricing#prices)
+```
 т.е. должно выглядеть примерно так:
     cores         = 2
     memory        = 1
     core_fraction = 5
-
+```
 
 2.Ответьте, как в процессе обучения могут пригодиться параметры preemptible = true и core_fraction=5 в параметрах ВМ.
 
