--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -39,7 +39,7 @@
 - скриншот консоли, curl должен отобразить тот же внешний ip-адрес;
 - ответы на вопросы.
 
-####
+#### Ответы
 
 ![tf-hw2-task1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task1.jpg)
 
@@ -91,7 +91,13 @@
 
 1. Замените все хардкод-**значения** для ресурсов **yandex_compute_image** и **yandex_compute_instance** на **отдельные** переменные. К названиям переменных ВМ добавьте в начало префикс **vm_web_** .  Пример: **vm_web_name**.
 2. Объявите нужные переменные в файле variables.tf, обязательно указывайте тип переменной. Заполните их **default** прежними значениями из main.tf. 
-3. Проверьте terraform plan. Изменений быть не должно. 
+3. Проверьте terraform plan. Изменений быть не должно.
+
+#### Ответ
+
+![tf-hw2-task2](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task2.jpg)
+
+[code](https://github.com/RomanVol1/terraform-hw/blob/main/02/task2.md)
 
 
 ### Задание 3
