--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -106,6 +106,9 @@
 2. Скопируйте блок ресурса и создайте с его помощью вторую ВМ в файле main.tf: **"netology-develop-platform-db"** ,  ```cores  = 2, memory = 2, core_fraction = 20```. Объявите её переменные с префиксом **vm_db_** в том же файле ('vms_platform.tf').  ВМ должна работать в зоне "ru-central1-b"
 3. Примените изменения.
 
+#### Ответ
+
+![tf-hw2-task3](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task3.jpg)
 
 ### Задание 4
 
