--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -108,7 +108,7 @@
 
 #### Ответ
 
-![tf-hw2-task3](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task3.jpg)
+![tf-hw2-task3](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task3.1.jpg)
 
 ### Задание 4
 
