--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -117,6 +117,24 @@
 
 В качестве решения приложите вывод значений ip-адресов команды ```terraform output```.
 
+#### Ответ
+
+```
+roman@netology:~/hw/terraform-hw/02/src$ terraform output
+instance_details = {
+  "netology-develop-platform-db" = {
+    "external_ip" = "130.193.34.189"
+    "fqdn" = "130.193.34.189.platform-db"
+    "instance_name" = "netology-develop-platform-db"
+  }
+  "netology-develop-platform-web" = {
+    "external_ip" = "51.250.74.20"
+    "fqdn" = "51.250.74.20.platform-web"
+    "instance_name" = "netology-develop-platform-web"
+  }
+}
+```
+
 
 ### Задание 5
 
