--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -135,6 +135,8 @@ instance_details = {
 }
 ```
 
+![tf-hw-task4](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task4.jpg)
+
 
 ### Задание 5
 
