--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -144,6 +144,13 @@ instance_details = {
 2. Замените переменные внутри ресурса ВМ на созданные вами local-переменные.
 3. Примените изменения.
 
+#### Ответ
+
+![tf-hw2-task5.1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5.1.jpg)
+
+![tf-hw2-task5.2](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5.2.jpg)
+
+[main.tf](https://github.com/RomanVol1/terraform-hw/blob/main/02/tf-hw2-task5)
 
 ### Задание 6
 
