--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -146,11 +146,17 @@ instance_details = {
 
 #### Ответ
 
-![tf-hw2-task5.1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5.1.jpg)
+![tf-hw2-task5.1](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5_1.jpg)
 
-![tf-hw2-task5.2](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5.2.jpg)
+![tf-hw2-task5.2](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5_2.jpg)
 
-[main.tf](https://github.com/RomanVol1/terraform-hw/blob/main/02/tf-hw2-task5)
+```
+locals {
+  vm_names = {
+    web = "${var.vm_web_name}-${var.vpc_name}"
+    db  = "${var.vm_db_name}-${var.db_vpc_name}"
+  }
+```
 
 ### Задание 6
 
