--- a/02/hw-02.md
+++ b/02/hw-02.md
@@ -150,13 +150,28 @@ instance_details = {
 
 ![tf-hw2-task5.2](https://github.com/RomanVol1/terraform-hw/blob/main/jpg/tf-hw2-task5_2.jpg)
 
+locals.tf
 ```
 locals {
   vm_names = {
     web = "${var.vm_web_name}-${var.vpc_name}"
     db  = "${var.vm_db_name}-${var.db_vpc_name}"
   }
+  resources = {
+    web = {
+        cores         = var.vm_web_cores
+        memory        = var.vm_web_memory
+        core_fraction = var.vm_web_core_fraction
+    },
+    db = {
+        cores         = var.db_cores  
+        memory        = var.db_memory  
+        core_fraction = var.db_core_fraction  
+    }
+  }
+}
 ```
+[main.tf](https://github.com/RomanVol1/terraform-hw/blob/main/02/src/task5.main.tf)
 
 ### Задание 6
 
